[gd_scene load_steps=5 format=2]

[ext_resource path="res://character/health_bar/health_bar.gd" type="Script" id=1]
[ext_resource path="res://assets/hp bar.png" type="Texture" id=2]
[ext_resource path="res://character/health_bar/assets/barHorizontal_light_blue.png" type="Texture" id=3]
[ext_resource path="res://character/health_bar/assets/barHorizontal_grey.png" type="Texture" id=4]

[node name="health_bar" type="Control"]
margin_right = 170.0
margin_bottom = 27.0
rect_min_size = Vector2( 170, 27 )
script = ExtResource( 1 )

[node name="temp_hp_progress_bar" type="TextureProgress" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.85, 0.85 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[node name="hp_progress_bar" type="TextureProgress" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.85, 0.85 )
value = 100.0
texture_progress = ExtResource( 2 )

[node name="hp_number" type="RichTextLabel" parent="."]
anchor_left = 0.917647
anchor_top = 1.0
anchor_right = 0.917647
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -22.0
rect_scale = Vector2( 1.562, 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "80"
__meta__ = {
"_edit_use_anchors_": true
}
